--- a/cssp/src/main/resources/static/index.html
+++ b/cssp/src/main/resources/static/index.html
@@ -13,9 +13,11 @@
 <link rel="stylesheet" type="text/css" href="css/customer.css">
 <link rel="stylesheet" type="text/css" href="css/prettify-style.css">
 <link rel="stylesheet" type="text/css" href="css/tree-control.css">
-<link rel="stylesheet" type="text/css" href="css/tree-control-attribute.css">
+<link rel="stylesheet" type="text/css"
+	href="css/tree-control-attribute.css">
 <link rel="stylesheet" type="text/css" href="css/ngDialog.min.css">
-<link rel="stylesheet" type="text/css" href="css/ngDialog-theme-default.min.css">
+<link rel="stylesheet" type="text/css"
+	href="css/ngDialog-theme-default.min.css">
 
 
 
@@ -23,7 +25,6 @@
 <!-- SCRIPTS -->
 <!-- build:js lib/js/main.min.js -->
 <script type="text/javascript" src="js/3rd/angular.min.js"></script>
-<!--  <script type="text/javascript" src="js/3rd/jquery.min.js"></script>-->
 <script type="text/javascript" src="js/3rd/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="js/3rd/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="js/3rd/angular-cookies.min.js"></script>
@@ -46,20 +47,18 @@
 						Dashboard <span class="menu-icon glyphicon glyphicon-transfer"></span>
 				</a></li>
 				<li class="sidebar-title"><span>NAVIGATION</span></li>
-				<li class="sidebar-list"><a href="#">Dashboard <span
-						class="menu-icon fa fa-tachometer"></span></a></li>
 				<li class="sidebar-list"><a href="#/space">Space <span
 						class="menu-icon fa fa-table"></span></a></li>
+
+				<li class="sidebar-list"><a href="#">Dashboard <span
+						class="menu-icon fa fa-tachometer"></span></a></li>
 			</ul>
 			<div class="sidebar-footer">
 				<div class="col-xs-4">
-					<a href="http://mtl.msky" target="_blank">
-						MTL </a>
+					<a href="http://mtl.msky" target="_blank"> MTL </a>
 				</div>
 				<div class="col-xs-4">
-					<a
-						href="#"
-						target="_blank"> About </a>
+					<a href="#" target="_blank"> About </a>
 				</div>
 				<div class="col-xs-4">
 					<a href="#"> Support </a>
@@ -71,7 +70,7 @@
 		<div id="content-wrapper">
 			<div class="page-content">
 
-				<!-- Header Bar -->
+				<!-- Header Bar 
 				<div class="row header">
 					<div class="col-xs-12">
 						<div class="user pull-right">
@@ -105,7 +104,7 @@
 							<div class="breadcrumb-links">Home / Dashboard</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<!-- End Header Bar -->
 
 				<!-- Main Content -->
