--- a/cssp/src/main/resources/static/pages/space.html
+++ b/cssp/src/main/resources/static/pages/space.html
@@ -99,7 +99,6 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 	<div class="row">
 		<div class="col-sm-offset-5 col-sm-10">
@@ -107,7 +106,7 @@
 				data-ng-click="loadSpace(master,slave)">Load Space</button>
 		</div>
 	</div>
-	<div data-ng-show="dataForTheMasterTree.length==0">
+	<div class="row" data-ng-show="dataForTheMasterTree.length==0">
 		<span class="label label-warning">three are something wrong
 			when loading data...</span> <br />
 	</div>
@@ -142,40 +141,63 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="row">
-			<div class="panel panel-default">
-				<div class="panel-heading"><h3>Sync method</h3></div>
-				<div class="panel-body">
-					<form>
-						<div class="radio">
-							<label><input type="radio" name="optradio" value="1"
-								data-ng-model="syncMethod">Overwrite</label> ,the master content
-							will overwrite the slave's content
-						</div>
-						<div class="radio">
-							<label><input type="radio" name="optradio" value="2"
-								data-ng-model="syncMethod">Merge</label> ,the master and slave
-							content will merge together and keep on both side.
-						</div>
-						<div class="radio">
-							<label><input type="radio" name="optradio" value="3"
-								data-ng-model="syncMethod">Only Delete</label> ,if the master
-							have some content deleted, then those content will be deleted on
-							slave
-						</div>
-						<div class="radio">
-							<label><input type="radio" name="optradio" value="4"
-								data-ng-model="syncMethod">Only Delete</label> ,if the master
-							have some content added, then those part will sync to slave,
-							other changes will not sync
-						</div>
-					</form>
-
-				</div>
-			</div>
+		<div class="col-sm-offset-5 col-sm-10">
+			<button type="button" class="btn btn-success"
+				data-ng-click="compareChage()">Compare Changes</button>
 		</div>
 	</div>
+	<div class="row">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3>Sync method</h3>
+			</div>
+			<div class="panel-body">
+				<form>
+					<div class="radio">
+						<label><input type="radio" name="optradio" value="1"
+							data-ng-model="sync.method">Overwrite</label> ,the master content
+						will overwrite the slave's content
+					</div>
+					<div class="radio">
+						<label><input type="radio" name="optradio" value="2"
+							data-ng-model="sync.method">Merge</label> ,the master and slave
+						content will merge together and keep on both side.
+					</div>
+					<div class="radio">
+						<label><input type="radio" name="optradio" value="3"
+							data-ng-model="sync.method">Only Delete</label> ,if the master
+						have some content deleted, then those content will be deleted on
+						slave
+					</div>
+					<div class="radio">
+						<label><input type="radio" name="optradio" value="4"
+							data-ng-model="sync.method">Only Delete</label> ,if the master
+						have some content added, then those part will sync to slave, other
+						changes will not sync
+					</div>
+					<div class="checkbox">
+						<label><input type="checkbox" name="day"
+							data-ng-model="sync.daily">Daily Sync</label> if you want daily
+						auto sync, please click this.
+					</div>
+					<div class="form-group">
+						<label for="synctime" class="col-sm-4 control-label">Sync
+							Time</label>
+						<div class="col-sm-4">
+							<input type="text" class="form-control" id="synctime"
+								data-ng-model="sync.time" placeholder="23:00">
+						</div>
+					</div>
+					<div class="col-sm-offset-5 col-sm-10">
+						<button type="button" class="btn btn-success"
+							data-ng-click="startSync(sync)">Start Sync Now</button>
+					</div>
+				</form>
+			</div>
 
+		</div>
+	</div>
 </div>
+
+
 
